force-app/main/default/objects/Opportunity/fields/Account_Information__c.field-meta.xml
<CustomField>
    <fullName>Account_Information__c</fullName>
    <formula>IF( ISBLANK(Account.AccPac_Account__c ) , Account.Name, Account.Name + &apos; (&apos; + Account.AccPac_Account__c + &apos;)&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Information</label>
    <type>Text</type>
</CustomField>