force-app/main/default/objects/Opportunity/fields/Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Created</label>
    <type>Checkbox</type>
</CustomField>