force-app/main/default/objects/Opportunity/fields/Close_Date_Previous_Business_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Previous_Business_Date__c</fullName>
    <formula>CloseDate  + (1* 
CASE (MOD( CloseDate - DATE(1900, 1,7),7), 
0,0, 
1,0, 
2,0, 
3,0, 
4,0, 
5,2, 
6,1, 
0 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date (Previous Business Date)</label>
    <type>Date</type>
</CustomField>