force-app/main/default/objects/Opportunity/fields/Community_Contact__c.field-meta.xml
<CustomField>
    <fullName>Community_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populate to create a new community user, when the opportunity is won.</inlineHelpText>
    <label>Community Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>