force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://trello.com/c/c2atHJQu/943-can-remove-quotes-object-and-consolidate-agreement-at-opportunity (formerly contact Name - only changing the label)</description>
    <label>Quote Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact Name)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>