force-app/main/default/objects/Opportunity/fields/Contract_Term_Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Approved_At__c</fullName>
    <description>The value of Contract Term at the time of approval.</description>
    <label>Contract Term Approved At</label>
    <length>30</length>
    <type>Text</type>
</CustomField>