force-app/main/default/objects/Opportunity/fields/CPQ2_Approval_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Approval_Status_Text__c</fullName>
    <description>Change logic to accommodate Ship To Score, contract pricing</description>
    <formula>CASE( CPQ2_ASN__c, 
1, &apos;Approved&apos;,
2, &apos;Requires Approval&apos;,
3, &apos;Requires Approval&apos;,
&apos;Requires Adjustment to Proceed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status (Text)</label>
    <type>Text</type>
</CustomField>