force-app/main/default/objects/Opportunity/fields/CPQ2_CCW__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_CCW__c</fullName>
    <formula>IF(CPQ2_ASN__c =1 ||  CPQ2_IA__c  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can move to Closed Won</label>
    <type>Checkbox</type>
</CustomField>