force-app/main/default/objects/Opportunity/fields/CPQ2_CLT__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_CLT__c</fullName>
    <label>Max Core List Price Threshold</label>
    <summarizedField>CPQ2_Core_List_Price_Request__c.CPQ2_Threshold_Triggered__c</summarizedField>
    <summaryForeignKey>CPQ2_Core_List_Price_Request__c.CPQ2_Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>