force-app/main/default/objects/Opportunity/fields/CPQ2_Core_List_Prices_Approved__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Core_List_Prices_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to trigger the approval of all children core list pricing.</description>
    <label>Core List Prices Approved</label>
    <type>Checkbox</type>
</CustomField>