force-app/main/default/objects/Opportunity/fields/CPQ2_CTAS__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_CTAS__c</fullName>
    <description>Value stamped based on the Contract Term value to be used in the Approval Status Numeric formula. Shorter Contract Terms may require approvals. Value set in Opportunity Before Update Trigger. 1 - Requires Manager Approval , 2 - Requires Director Approval</description>
    <label>Contract Term Approval Status</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>