force-app/main/default/objects/Opportunity/fields/CPQ2_Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Date_Approved__c</fullName>
    <label>Date Approved</label>
    <type>DateTime</type>
</CustomField>