force-app/main/default/objects/Opportunity/fields/CPQ2_Deal_Score__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Deal_Score__c</fullName>
    <formula>if( CPQ2_HC__c = 0, null, ROUND(( CPQ2_GMPDS__c 
+ $Setup.CPQ_Settings__c.CPQ_Deal_Score_Buffer__c)*100,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>