force-app/main/default/objects/Opportunity/fields/CPQ2_FAS__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_FAS__c</fullName>
    <label>FSA Approved Stamp</label>
    <length>3</length>
    <type>Text</type>
</CustomField>