force-app/main/default/objects/Opportunity/fields/CPQ2_FSA_Mapping__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_FSA_Mapping__c</fullName>
    <formula>Account.FSA_Mapping__r.Name</formula>
    <label>Ship To FSA Mapping</label>
    <type>Text</type>
</CustomField>