force-app/main/default/objects/Opportunity/fields/CPQ2_GM__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_GM__c</fullName>
    <formula>CPQ2_TCR__c - ((Account.CPQ2_CSBSM__c * Account.CPQ2_DAF__c*  CPQ2_MCV__c) +  CPQ2_TCC__c +  (CPQ2_TCR__c *  Account.CPQ2_DOR__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>