force-app/main/default/objects/Opportunity/fields/CPQ2_GMP__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_GMP__c</fullName>
    <formula>CPQ2_GM__c / If( CPQ2_TCR__c  = 0, 1, CPQ2_TCR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>