force-app/main/default/objects/Opportunity/fields/CPQ2_GMPDS__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_GMPDS__c</fullName>
    <formula>CPQ2_GMDS__c  / If(  CPQ2_TAR__c   = 0, 1, CPQ2_TAR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMP Deal Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>