force-app/main/default/objects/Opportunity/fields/CPQ2_HC__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_HC__c</fullName>
    <label>Hygiene Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>