force-app/main/default/objects/Opportunity/fields/CPQ2_HF__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_HF__c</fullName>
    <description>Used for calculating Ship To Score</description>
    <label>Highest Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>