force-app/main/default/objects/Opportunity/fields/CPQ2_IA__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_IA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore CPQ Approval Process</label>
    <type>Checkbox</type>
</CustomField>