force-app/main/default/objects/Opportunity/fields/CPQ2_Low_Margin_Found__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Low_Margin_Found__c</fullName>
    <description>Roll Up of CPQ2_Line_Score_Colour__c where it&apos;s equal to &apos;Yellow&apos; OR &apos;Red&apos;</description>
    <label>Low Margin Found</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.CPQ2_Line_Score_Colour__c</field>
        <operation>notEqual</operation>
        <value>Green</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.CPQ2_Line_Score_Colour__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>