force-app/main/default/objects/Opportunity/fields/CPQ2_MCV__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_MCV__c</fullName>
    <description>Highest Frequency between Account and Opportunity</description>
    <formula>MAX( Account.CPQ2_HF__c , CPQ2_HF__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Account Opportunity Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>