force-app/main/default/objects/Opportunity/fields/CPQ2_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Service_Territory__c</fullName>
    <formula>Account.Service_Territory__r.Name</formula>
    <label>Ship To Service Territory</label>
    <type>Text</type>
</CustomField>