force-app/main/default/objects/Opportunity/fields/CPQ2_SSA__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_SSA__c</fullName>
    <description>This is the Ship To Score Approved at. This gets stamped by the approval process when the Ship To Score is approved for the Opportunity</description>
    <inlineHelpText>This is the Ship To Score Approved at. This gets stamped by the approval process when the Ship To Score is approved for the Opportunity</inlineHelpText>
    <label>Ship To Score Approved At</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>