force-app/main/default/objects/Opportunity/fields/CPQ2_SSS__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_SSS__c</fullName>
    <description>This is the Ship To Score Signed At.  This gets stamped by the Before Update Opportunity Trigger when the Opportunity Stage is Signed.</description>
    <inlineHelpText>This is the Ship To Score Signed At.  This gets stamped by the Before Update Opportunity Trigger when the Opportunity Stage is Signed.</inlineHelpText>
    <label>Ship To Score Signed At</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>