force-app/main/default/objects/Opportunity/fields/CPQ2_TAR__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_TAR__c</fullName>
    <description>Used for calculating Ship To Score</description>
    <label>Total Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>