force-app/main/default/objects/Opportunity/fields/CPQ2_TCaC__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_TCaC__c</fullName>
    <label>Total Capital Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>