force-app/main/default/objects/Opportunity/fields/CPQ2_TCC__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_TCC__c</fullName>
    <description>Total Account Cost + Total Opportunity Cost</description>
    <formula>Account.CPQ2_TOAC__c +  CPQ2_TAC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Account + Opp Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>