force-app/main/default/objects/Opportunity/fields/CPQ2_TCR__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_TCR__c</fullName>
    <description>Account + Opps Total Revenue</description>
    <formula>Account.CPQ2_TOAR__c +  CPQ2_TAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Account + Opp Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>