force-app/main/default/objects/Opportunity/fields/CPQ2_Test_Switch_Convert_Opp__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Test_Switch_Convert_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Switch Convert Opp</label>
    <type>Checkbox</type>
</CustomField>