force-app/main/default/objects/Opportunity/fields/CPQ2_Total_CCC__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Total_CCC__c</fullName>
    <formula>Account.CPQ2_TCaC__c + CPQ2_TCaC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Account + Opp Capital Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>