force-app/main/default/objects/Opportunity/fields/CPQ_ACSBSM__c.field-meta.xml
<CustomField>
    <fullName>CPQ_ACSBSM__c</fullName>
    <description>Adjusted Cost/Stop (before service mat)</description>
    <formula>CPQ_CSBSM__c *  CPQ_DAF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*Adjusted Cost/Stop (before service mat)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>