force-app/main/default/objects/Opportunity/fields/CPQ_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Approval_Status__c</fullName>
    <formula>IF(( CPQ_DSS__c  &gt;=   $Setup.CPQ_Settings__c.CPQ_T1__c   || CPQ_Deal_Score__c &gt;= CPQ_Deal_Score_Approved_To__c || CPQ_HC__c = 0), IF(CPQ_FSA_Approval_Met__c ,IF( CPQ_DSS__c  &gt;=   $Setup.CPQ_Settings__c.CPQ_T0__c ,IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;Green&quot;)  + &apos; Approved&apos;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;)  + &apos; Approved&apos;)
, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;) + &apos; Requires Approval&apos;),

IF( RecordType.DeveloperName = &apos;New_Conversion_Opportunity&apos;, 
IF(CPQ_DSS__c &gt;=     $Setup.CPQ_Settings__c.CPQ_T2__c    , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;) + &apos; Requires Approval&apos;,
IF(CPQ_DSS__c &gt;=   $Setup.CPQ_Settings__c.CPQ_T3__c  , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;) + &apos; Requires Approval&apos;,
IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;Denied&quot;) + &apos; Requires Adjustment to Proceed&apos;)),

IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;) + &apos; Requires Approval&apos;)
)</formula>
    <label>***Approval Status</label>
    <type>Text</type>
</CustomField>