force-app/main/default/objects/Opportunity/fields/CPQ_Can_move_to_Awaiting_Signed__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Can_move_to_Awaiting_Signed__c</fullName>
    <formula>IF(CONTAINS(CPQ_Approval_Status__c , &apos;Approved&apos;)  ||  CPQ_Ignore_CPQ_Approval_Process__c , true, false)</formula>
    <inlineHelpText>This flag is used for validation rules to dictate if the deal score is sufficient to move the opportunity to closed won</inlineHelpText>
    <label>***Can move to Closed Won</label>
    <type>Checkbox</type>
</CustomField>