force-app/main/default/objects/Opportunity/fields/CPQ_Costing_Model_Stamp__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Costing_Model_Stamp__c</fullName>
    <label>***Costing Model Stamp</label>
    <type>DateTime</type>
</CustomField>