force-app/main/default/objects/Opportunity/fields/CPQ_CSBSM__c.field-meta.xml
<CustomField>
    <fullName>CPQ_CSBSM__c</fullName>
    <description>Cost/Stop Before Service and Materials</description>
    <label>**Cost/Stop Before Service and Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>