force-app/main/default/objects/Opportunity/fields/CPQ_DAF__c.field-meta.xml
<CustomField>
    <fullName>CPQ_DAF__c</fullName>
    <description>Distance Adjustment Factor</description>
    <label>***Distance Adjustment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>