force-app/main/default/objects/Opportunity/fields/CPQ_DCR__c.field-meta.xml
<CustomField>
    <fullName>CPQ_DCR__c</fullName>
    <description>Direct Cost % of Revenue</description>
    <label>***Direct Cost % of Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>