force-app/main/default/objects/Opportunity/fields/CPQ_Deal_Score_Approved_To__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Deal_Score_Approved_To__c</fullName>
    <label>***Deal Score Approved At</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>