force-app/main/default/objects/Opportunity/fields/CPQ_Deal_Score_List__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Deal_Score_List__c</fullName>
    <formula>ROUND(  (CPQ_Gross_Margin_Per_List__c 
+ $Setup.CPQ_Settings__c.CPQ_Deal_Score_Buffer__c)*100,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***Hygiene - List Deal Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>