force-app/main/default/objects/Opportunity/fields/CPQ_DSS__c.field-meta.xml
<CustomField>
    <fullName>CPQ_DSS__c</fullName>
    <description>Used for storing the deal score to reduce formula length pressures</description>
    <label>***Deal Score Stamp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>