force-app/main/default/objects/Opportunity/fields/CPQ_FSA_Approval_Met__c.field-meta.xml
<CustomField>
    <fullName>CPQ_FSA_Approval_Met__c</fullName>
    <formula>IF( TEXT(Account.FSA_Mapping__r.CPQ_Service_Zone__c) =  $Setup.CPQ_Settings__c.CPQ_OSAZ__c , IF(  Account.FSA_Mapping__r.FSA__c  =  CPQ_FSA_Approved_Stamp__c , true, false ), true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***FSA Approval Met</label>
    <type>Checkbox</type>
</CustomField>