force-app/main/default/objects/Opportunity/fields/CPQ_GMP__c.field-meta.xml
<CustomField>
    <fullName>CPQ_GMP__c</fullName>
    <formula>CPQ_GM__c /  If(CPQ_THARR__c = 0, 1, CPQ_THARR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***Gross Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>