force-app/main/default/objects/Opportunity/fields/CPQ_Gross_Margin_less_Capital_Charge__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Gross_Margin_less_Capital_Charge__c</fullName>
    <formula>CPQ_GM__c -  CPQ_Total_Capital_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***Gross Margin less Capital Charge ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>