force-app/main/default/objects/Opportunity/fields/CPQ_Gross_Margin_less_Capital_Charge_Per__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Gross_Margin_less_Capital_Charge_Per__c</fullName>
    <formula>CPQ_Gross_Margin_less_Capital_Charge__c /CPQ_THARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***Gross Margin less Capital Charge (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>