force-app/main/default/objects/Opportunity/fields/CPQ_Gross_Margin_Per_List__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Gross_Margin_Per_List__c</fullName>
    <formula>CPQ_Gross_Margin_List__c / CPQ_Total_Annual_Revenue_Hygiene_List_Pr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***Gross Margin (%) - List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>