force-app/main/default/objects/Opportunity/fields/CPQ_Gross_Margin_Per_Service__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Gross_Margin_Per_Service__c</fullName>
    <formula>CPQ_GM__c / CPQ_HV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***Gross Margin Per Service ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>