force-app/main/default/objects/Opportunity/fields/CPQ_HC__c.field-meta.xml
<CustomField>
    <fullName>CPQ_HC__c</fullName>
    <description>Count of Hygiene Price Model Line Itmes</description>
    <label>***Hygiene Count</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.CPQ_Price_Model__c</field>
        <operation>equals</operation>
        <value>Hygiene Pricing Model</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>