force-app/main/default/objects/Opportunity/fields/CPQ_Hygiene_Deal_Score__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Hygiene_Deal_Score__c</fullName>
    <formula>IF(  CPQ_HC__c = 0, &quot;&quot;,
IF( CPQ_Deal_Score__c &gt;=   $Setup.CPQ_Settings__c.CPQ_T0__c  , IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;Green2&quot;),
IF( CPQ_Deal_Score__c &gt;=   $Setup.CPQ_Settings__c.CPQ_T1__c  , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
IF ( CPQ_Deal_Score__c &gt;=  $Setup.CPQ_Settings__c.CPQ_T2__c   , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;),
IF ( CPQ_Deal_Score__c &gt;=  $Setup.CPQ_Settings__c.CPQ_T3__c   , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Yellow&quot;),
IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;Denied&quot;)))))) + &apos; &apos; + TEXT(CPQ_Deal_Score__c)</formula>
    <label>***Hygiene - Deal Score</label>
    <type>Text</type>
</CustomField>