force-app/main/default/objects/Opportunity/fields/CPQ_Ignore_CPQ_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Ignore_CPQ_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>***Ignore CPQ Approval Process</label>
    <type>Checkbox</type>
</CustomField>