force-app/main/default/objects/Opportunity/fields/CPQ_Lowest_Hygiene_Score__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Lowest_Hygiene_Score__c</fullName>
    <label>***Lowest Hygiene Score</label>
    <summarizedField>OpportunityLineItem.CPQ_Margin_Percent__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.CPQ_Price_Model__c</field>
        <operation>equals</operation>
        <value>Hygiene Pricing Model</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>