force-app/main/default/objects/Opportunity/fields/CPQ_Other_Direct_Costs__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Other_Direct_Costs__c</fullName>
    <formula>CPQ_THARR__c * CPQ_DCR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***Other Direct Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>