force-app/main/default/objects/Opportunity/fields/CPQ_Regional_Costing_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Regional_Costing_Model_Name__c</fullName>
    <label>***Regional Costing Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>