force-app/main/default/objects/Opportunity/fields/CPQ_TC__c.field-meta.xml
<CustomField>
    <fullName>CPQ_TC__c</fullName>
    <description>Total Costs</description>
    <label>***Total Costs</label>
    <summarizedField>OpportunityLineItem.CPQ_Stamped_Costs__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.CPQ_Price_Model__c</field>
        <operation>equals</operation>
        <value>Hygiene Pricing Model</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>