force-app/main/default/objects/Opportunity/fields/CPQ_TDC__c.field-meta.xml
<CustomField>
    <fullName>CPQ_TDC__c</fullName>
    <description>Total Direct Cost</description>
    <formula>CPQ_TC__c +  CPQ_TSCDS__c +( CPQ_THARR__c *  CPQ_DCR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***Total Direct Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>