force-app/main/default/objects/Opportunity/fields/CPQ_THARR__c.field-meta.xml
<CustomField>
    <fullName>CPQ_THARR__c</fullName>
    <description>Total Annual Revenue - Hygiene</description>
    <formula>CPQ_THMRR__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***Total Annual Revenue - Hygiene</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>