force-app/main/default/objects/Opportunity/fields/CPQ_THMRR__c.field-meta.xml
<CustomField>
    <fullName>CPQ_THMRR__c</fullName>
    <description>Total Hygiene MRR</description>
    <label>***Total Monthly Revenue - Hygiene</label>
    <summarizedField>OpportunityLineItem.Total_Monthly_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.CPQ_Price_Model__c</field>
        <operation>equals</operation>
        <value>Hygiene Pricing Model</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>