force-app/main/default/objects/Opportunity/fields/CPQ_Total_Annual_Revenue_Hygiene_List_Pr__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Total_Annual_Revenue_Hygiene_List_Pr__c</fullName>
    <label>**Total Annual Revenue - Hygiene List Pr</label>
    <summarizedField>OpportunityLineItem.CPQ_Total_Annual_Revenue_List_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.CPQ_Price_Model__c</field>
        <operation>equals</operation>
        <value>Hygiene Pricing Model</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>