force-app/main/default/objects/Opportunity/fields/Customer_Motivation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Motivation__c</fullName>
    <description>Used to capture reasons why we won a deal, so we can use that and analyze why we win deals and distribute that knowledge to sales reps and create industry/other customer attribute specific content.</description>
    <label>Customer Motivation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need/ Legislation</fullName>
            </value>
            <value>
                <fullName>Health/ Cleanliness</fullName>
            </value>
            <value>
                <fullName>Improvement/ Image/ Equality</fullName>
            </value>
            <value>
                <fullName>Fear Of Missing Out (FOMO)</fullName>
            </value>
            <value>
                <fullName>Financial Gain/ Tenant or Customer benefit (CapEx vs OpEx)</fullName>
                <label>Financial Gain/ Tenant or Customer benefit</label>
            </value>
            <value>
                <fullName>Vendor Consolidation</fullName>
            </value>
            <value>
                <fullName>Convenience/Easy</fullName>
            </value>
            <value>
                <fullName>Product Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>