force-app/main/default/objects/Opportunity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>https://trello.com/c/c2atHJQu/943-can-remove-quotes-object-and-consolidate-agreement-at-opportunity</description>
    <formula>Contact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>