force-app/main/default/objects/Opportunity/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>Dish Machine</fullName>
            </value>
            <value>
                <fullName>Dyson</fullName>
            </value>
            <value>
                <fullName>Matting</fullName>
            </value>
            <value>
                <fullName>Washroom Automation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>