force-app/main/default/objects/Opportunity/fields/Has_Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Has_Site_Survey__c</fullName>
    <formula>IF(ISBLANK(Account.Site_Survey__c), false, true)</formula>
    <label>Has Site Survey</label>
    <type>Checkbox</type>
</CustomField>