force-app/main/default/objects/Opportunity/fields/Inside_Sales_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked:  an inside sales rep was involved with this Opportunity
Unchecked: an inside sales rep was NOT involved with this Opportunity</inlineHelpText>
    <label>Inside Sales Engaged</label>
    <type>Checkbox</type>
</CustomField>