force-app/main/default/objects/Opportunity/fields/Is_Order_to_be_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_to_be_Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Order to be Emergency</label>
    <type>Checkbox</type>
</CustomField>